welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:35: error: Unmatched closing brace '}' ignored here
}
^